<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.pages.UnitsPage"
    android:orientation="vertical"
    android:background="@color/primaryBgColor"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_header" >
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />
    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="17dp"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="17dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical"
            android:text="@string/weight_units"
            android:layout_weight="1"
            android:textStyle = "bold"
            android:layout_marginTop="17dp"
            />

        <ToggleButton
            android:id="@+id/toggleWeight"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:checked="false"
            android:textOff="@string/kg"
            android:textOn="@string/lbs"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:textAppearance="@style/Theme.Abreath"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="17dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical"
            android:text="@string/height_units"
            android:textStyle = "bold"
            android:layout_weight="1"
            android:layout_marginTop="17dp"
            />

        <ToggleButton
            android:id="@+id/toggleHeight"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:checked="false"
            android:textOff="@string/cm"
            android:textOn="@string/in"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:textAppearance="@style/Theme.Abreath"/>

    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>