<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.pages.HelpPage"
    android:orientation="vertical"
    android:background="@color/primaryBgColor"
    >

    <FrameLayout
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/gradient_header" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
            <ImageView
                android:id="@+id/imageView2"
                android:layout_gravity="center"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearanceLogo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:fontFamily="@font/expletus_sans_bold"
                android:text="@string/breath"
                android:textColor="@android:color/white"
                android:textSize="48sp"
                android:textStyle="bold" />


        </LinearLayout>

    </FrameLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/abreath_is_an_application_to_help_you_make_the_right_choice"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        android:padding="17dp">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/when_you_drink_always_make_sure_it_is_safe_for_you_to_drive_before_taking_the_wheel"
            android:padding="3dp"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/when_you_drink_always_make_sure_it_is_safe_for_you_to_drive"
            android:padding="3dp"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/alcohol_levels_are_presented_in_of_bac_blood_alcohol_content_in_your_body"
            android:padding="3dp"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/the_legal_limit_in_canada_is_set_currently_set_to_0_08_bac"
            android:padding="3dp"
            android:textAlignment="center"
            />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="17dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/start" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/click_on_the_start_button_to_connect_with_your_breathalyzer"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/piechart" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/the_results_will_be_displayed_after_you_have_blown_into_the_breathalyzer"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/hbar" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/you_can_keep_track_and_compare_all_your_previous_tests_on_the_main_screen"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>


</LinearLayout>